# cpp20-spaceship

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: Line.h  Point.h
src/: Line.cpp  Point.cpp
test/: spaceship-test.cpp
